--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -14,17 +14,18 @@
    
       <li>          
    
-     <strong>Garlic Bread</strong>       
-   
-        <p>Crusty bread topped with garlic butter and parmeson cheese.</p> 
-   
-          </li> 
+         <strong>Garlic Bread</strong>
+         <img src="garlic-bread.jpg" alt="A delicious loaf of garlic bread" width="300" height="200">     
+         <p>Crusty bread topped with garlic butter and parmesan cheese.</p>
+         </li> 
      <li>
         <strong>bruschetta</strong>
-     <p>Taosted bread with fresh tomatoes, basil, and olive oil.</p>
+        <img src="bruschetta.jpg" alt="Caprese Toast With Mozzarella, Tomatoes And Basil" width="300" height="200"> 
+        <p>Toasted bread with fresh tomatoes, basil, and olive oil.</p>
      </li>
      <li>
         <strong>spinach artichoke dip </strong>
+        <img src="spinach artichoke dip.jpg" alt="Cheesy spinach and artichoke dip served with tortilla chips for dipping" width="400" height="200"> <BR></BR> 
         <p>Spinach artichoke dip is my favorite kind of savory dip. It has so much flavor, comforting cheese, and rich veggies.</p>
      </li> 
    
@@ -32,21 +33,17 @@
    
      <h2>Main Courses</h2> 
    
-      <ul>   
-   
-        <li>      
-         <strong>Artichoke and Spinach Dip</strong>     
-         <p>Tuscan bread served with a delicious blend of spinach, artichoke, and cream.</p>   
-        </li> 
-        
+      <ul>           
         <li>
-            <strong>Bruschetta</strong>
-            <p>Grilled country bread with tomatoes, olive oil, garlic and basil.</p>
+            <strong>Spaghetti Carbonara</strong>
+            <img src="spaghetti-carbonara.jpg" alt="Spaghetti carbonara" width="300" height="200">
+            <p>A simple yet satisfying Italian pasta dish made with eggs, cheese, and pancetta. A classic comfort food.</p>
         </li>
 
         <li>
-            <strong>stuffed mushrooms</strong>
-            <p>Mushrooms caps baked with a filling of three choice cheeses, breadcrumbs and clams.</p>
+            <strong>Beef Wellington</strong>
+            <img src="beef-wellington.jpg" alt="Beef Wellington" width="300" height="200"> 
+            <p>A sophisticated dish consisting of a filet mignon wrapped in puff pastry and topped with a mushroom duxelles. A decadent choice for a special occasion.></p>
         </li> 
    
       </ul>   
@@ -57,19 +54,21 @@
    
       <li>    
    
-           <strong>Chocolate Fondue</strong>     
-   
-          <p>Assorted fruits and marshmallows served with rich chocolate fondue.</p>    
+         <strong>Tiramisu</strong>     
+         <img src="tiramisu.jpg" alt="Tiramisu" width="250" height="200">
+         <p>A layered Italian dessert made with coffee-soaked ladyfingers, mascarpone cheese, and cocoa powder.</p>    
    
        </li> 
        
        <li>
          <strong> Caramel Browniies Lava Cake</strong>
+         <img src="lava_cake_.jpg" alt="lava cake" width="300" height="200">
          <p>A decadent chocolate brownie and smooth caramel lava cake served with vanilla ice cream and lightly spinkled with icing sugar.</p>
         </li>
 
         <li>
             <strong>New York Cheesecake</strong>
+            <img src="cheesecake.jpg" alt="cheesecake" width="250" height="200">
             <p>A rich New York-style cheesecake made with Philadelphia cream chesse served in a pool of kelsey's signature sour cherry sauce, a drizzle of decadent dark chocolate fudge, and whipped cream.</p>
         </li> 
    
