--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,7 +7,7 @@
  <body>   
 
     <h1>The Cozy Corner Menu</h1>
-   
+     <section>
        <h2>Appetizers</h2>  
    
      <ul>     
@@ -28,9 +28,9 @@
         <img src="spinach artichoke dip.jpg" alt="Cheesy spinach and artichoke dip served with tortilla chips for dipping" width="400" height="200"> <BR></BR> 
         <p>Spinach artichoke dip is my favorite kind of savory dip. It has so much flavor, comforting cheese, and rich veggies.</p>
      </li> 
-   
       </ul>  
-   
+   </section>
+   <section>
      <h2>Main Courses</h2> 
    
       <ul>           
@@ -47,7 +47,8 @@
         </li> 
    
       </ul>   
-   
+   </section>
+   <section>
     <h2>Desserts</h2>  
    
      <ul>     
@@ -73,7 +74,7 @@
         </li> 
    
      </ul> 
-   
+   </section>
       <p><a href="contact.html">Contact us for reservations</a></p> 
    
    </body>
