--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,22 +10,28 @@
      <section>
        <h2>Appetizers</h2>  
    
-     <ul>     
+       <ul>     
    
       <li>          
    
          <strong>Garlic Bread</strong>
-         <img src="garlic-bread.jpg" alt="A delicious loaf of garlic bread" width="300" height="200">     
+         <figure>
+         <img src="garlic-bread.jpg" alt="A delicious loaf of garlic bread" width="300" height="200">
+         </figure>     
          <p>Crusty bread topped with garlic butter and parmesan cheese.</p>
          </li> 
      <li>
         <strong>bruschetta</strong>
+        <figure>
         <img src="bruschetta.jpg" alt="Caprese Toast With Mozzarella, Tomatoes And Basil" width="300" height="200"> 
+        </figure>
         <p>Toasted bread with fresh tomatoes, basil, and olive oil.</p>
      </li>
      <li>
         <strong>spinach artichoke dip </strong>
-        <img src="spinach artichoke dip.jpg" alt="Cheesy spinach and artichoke dip served with tortilla chips for dipping" width="400" height="200"> <BR></BR> 
+        <figure>
+        <img src="spinach artichoke dip.jpg" alt="Cheesy spinach and artichoke dip served with tortilla chips for dipping" width="400" height="200"> <BR></BR>
+        </figure> 
         <p>Spinach artichoke dip is my favorite kind of savory dip. It has so much flavor, comforting cheese, and rich veggies.</p>
      </li> 
       </ul>  
@@ -36,13 +42,17 @@
       <ul>           
         <li>
             <strong>Spaghetti Carbonara</strong>
+            <figure></figure>
             <img src="spaghetti-carbonara.jpg" alt="Spaghetti carbonara" width="300" height="200">
+            </figure>
             <p>A simple yet satisfying Italian pasta dish made with eggs, cheese, and pancetta. A classic comfort food.</p>
         </li>
 
         <li>
             <strong>Beef Wellington</strong>
+            <figure>
             <img src="beef-wellington.jpg" alt="Beef Wellington" width="300" height="200"> 
+            </figure>
             <p>A sophisticated dish consisting of a filet mignon wrapped in puff pastry and topped with a mushroom duxelles. A decadent choice for a special occasion.></p>
         </li> 
    
@@ -55,21 +65,27 @@
    
       <li>    
    
-         <strong>Tiramisu</strong>     
+         <strong>Tiramisu</strong> 
+         <figure>    
          <img src="tiramisu.jpg" alt="Tiramisu" width="250" height="200">
+         </figure>
          <p>A layered Italian dessert made with coffee-soaked ladyfingers, mascarpone cheese, and cocoa powder.</p>    
    
        </li> 
        
        <li>
          <strong> Caramel Browniies Lava Cake</strong>
+         <figure>
          <img src="lava_cake_.jpg" alt="lava cake" width="300" height="200">
+         </figure>
          <p>A decadent chocolate brownie and smooth caramel lava cake served with vanilla ice cream and lightly spinkled with icing sugar.</p>
         </li>
 
         <li>
             <strong>New York Cheesecake</strong>
+            <figure>
             <img src="cheesecake.jpg" alt="cheesecake" width="250" height="200">
+            </figure>
             <p>A rich New York-style cheesecake made with Philadelphia cream chesse served in a pool of kelsey's signature sour cherry sauce, a drizzle of decadent dark chocolate fudge, and whipped cream.</p>
         </li> 
    
